fix: iPhone画像の解像度エラーを解消およびエラーコードの分離
